efecto hover en las cards en footer de index

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             </div>
         </section>
     </main>
-    <footer class="d-flex justify-content-center pt-5">
+    <footer class="pt-5">
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-5">
-            <div class="col">
-                <div class="card h-100">
+            <div class="col d-flex justify-content-center">
+                <div class="card h-100 card-hover">
                     <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
                         <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido"
                             title="El Teatro Dormido" class="w-75 mt-5">
@@ -60,8 +60,8 @@
                     <h5 class="card-title mx-0 mt-3">Creación de Contenidos</h5>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
+            <div class="col d-flex justify-content-center">
+                <div class="card h-100 card-hover">
                     <a href="https://nosotros6.github.io/Caleidos/" target="_blank" rel="noopener noreferrer">
                         <img src="./assets/Img/webEntornasol.png" alt="Fundación Entornasol"
                             title="Fundación Entornasol" class="w-75 mt-5">
@@ -71,8 +71,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
+            <div class="col d-flex justify-content-center ">
+                <div class="card h-100 card-hover">
                     <a href="https://toolmania.cl/" target="_blank" rel="noopener noreferrer">
                         <img src="./assets/Img/toolmania-home.png" alt="Toolmania" title="Toolmania" class="w-75 mt-5">
                     </a>
