--- a/jobs.html
+++ b/jobs.html
@@ -61,25 +61,25 @@
     <section class="work-cards justify-content-center">
       <div id="card-jobs" class="card">
         <div class="image-container">
+          <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
+        </div>
+        <h3 class="card-title">Directora Ejecutiva</h3>
+        <h4 class="card-subtitle">Corporación Cultural Teatro Pencopolitano</h4>
+        <p class="card-subtitle">Gestión Cultural y de Contenidos</p>
+        <p class="card-info">Entre marzo de 1997 a la fecha</p>
+        <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
+      </div>
+      
+      <div id="card-jobs" class="card">
+        <div class="image-container">
           <img src="./assets/Img/logo-entornasol.jpg" class="card-img-top w-50 m-5" alt="Entornasol">
         </div>
-        <h3 class="card-title">Diseñadora Web</h3>
+        <h3 class="card-title">Periodista asesora y Diseñadora Web</h3>
         <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
         <p class="card-subtitle">Estrategias de comunicación, creación de contenidos, diseño Ux/Ui y desarrollo front
           end.</p>
-        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde octubre de 2023 a la fecha</p>
-      </div>
-
-      <div id="card-jobs" class="card">
-        <div class="image-container">
-          <a href="https://www.alkemy.org/" target="_blank" class="card-link">
-          <img src="./assets/Img/logo-alkemy.png" class="card-img-top w-50 m-5" alt="Alkemy"></a>
-        </div>
-        <h3 class="card-title">Asistente de Tutorías</h3>
-        <h4 class="card-subtitle">Alkemy</h4>
-        <p class="card-subtitle">Desarrollo Web Fullstack Java</p>
-        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde enero de 2024 a la fecha</p>
-        <a href="https://www.alkemy.org/" target="_blank" class="card-link">Sitio web de la empresa</a>
+        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde 2021 a 2024</p>
       </div>
 
       <div id="card-jobs" class="card">
@@ -92,6 +92,18 @@
         <p class="card-subtitle">Diseño UX/UI y Front End Trainee</p>
         <p class="card-info">Desde marzo de 2022 a la fecha</p>
         <a href="https://edutecno.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
+      </div>
+
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://www.alkemy.org/" target="_blank" class="card-link">
+          <img src="./assets/Img/logo-alkemy.png" class="card-img-top w-50 m-5" alt="Alkemy"></a>
+        </div>
+        <h3 class="card-title">Asistente de Tutorías</h3>
+        <h4 class="card-subtitle">Alkemy</h4>
+        <p class="card-subtitle">Desarrollo Web Fullstack Java</p>
+        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde enero de 2024 a la fecha</p>
+        <a href="https://www.alkemy.org/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
 
       <div id="card-jobs" class="card">
@@ -134,7 +146,7 @@
         <a href="https://avianet.cl/aviaweb/" target="_blank" class="card-link pb-3">Sitio web de la empresa</a>
       </div>
 
-      <div id="card-jobs" class="card">
+      <!-- <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">
             <img class="card-img-top w-50 m-5" src="./assets/Img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
@@ -144,7 +156,7 @@
         <p class="card-subtitle">Gestión Cultural y de Contenidos</p>
         <p class="card-info">Entre marzo de 1997 y marzo de 2009</p>
         <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
-      </div>
+      </div> -->
       
       <div id="card-jobs" class="card">
         <div class="image-container">
