actualizacion trabajos fecha alkemy

--- a/jobs.html
+++ b/jobs.html
@@ -102,7 +102,7 @@
         <h3 class="card-title">Asistente de Tutorías</h3>
         <h4 class="card-subtitle">Alkemy</h4>
         <p class="card-subtitle">Desarrollo Web Fullstack Java</p>
-        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde enero de 2024 a la fecha</p>
+        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">2024</p>
         <a href="https://www.alkemy.org/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
 
