cambio de color secundario en scss

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="assets/Img/logo-pili.svg">
-    <title>Pilar García Royo</title>
+    <title>Pilar García Royo Gestora Cultural</title>
     <meta name="author" content="Pilar García Royo">
-    <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
+    <meta name="description" content="Mi curriculum vitae como periodista, gestora cultural y diseñadora web">
     <meta name="keywords"
-        content="curriculum vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI, portafolio">
+        content="curriculum vitae, periodista, gestora cultural, cultura, casa pencopolitana, teatro pencopolitano, corporación, concepción, desarrollo, diseño, web, ux, ui, frontend, TI, portafolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -29,7 +29,7 @@
                 <section class="portfolio-experiment">
                     <a>
                         <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
-                        <span class="parrafo-cover text-secondary">periodista & diseño web</span>
+                        <span class="parrafo-cover text-secondary">periodista & gestora cultural</span>
                         <span class="line -right"></span>
                         <span class="line -top"></span>
                         <span class="line -left"></span>
