cambio de texto en index

--- a/index1.html
+++ b/index1.html
@@ -46,12 +46,12 @@
     
     <section class="my-5 pt-5">
         <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
-        <h1 class="epigrafeTituloHome2 text-center">PERIODISTA & DISEÑADORA WEB</h1>
-        <h1 class="tituloHome text-center mt-5">UNA BUENA MEZCLA</h1>
+        <!-- <h1 class="epigrafeTituloHome2 text-center">PERIODISTA & DISEÑADORA WEB</h1> -->
+        <h1 class="tituloHome text-center mt-5">PERIODISTA Y GESTORA CULTURAL</h1>
     </section>
     <section class="textoHome row">
-        <div class="col-12 col-lg-6 m-3">
-            <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web y me motiva combinar mi experiencia en Periodismo + Diseño UX/UI + Front End para crear proyectos digitales efectivos y accesibles. Disfruto trabajando con diversos lenguajes y herramientas que puedes <span> <a href="studies.html">revisar AQUÍ.</a></span></p>
+        <div class="col-12 col-lg-6 m-3 pt-5">
+            <!-- <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web y me motiva combinar mi experiencia en Periodismo + Diseño UX/UI + Front End para crear proyectos digitales efectivos y accesibles. Disfruto trabajando con diversos lenguajes y herramientas que puedes <span> <a href="studies.html">revisar AQUÍ.</a></span></p>
                 <p>Me inspira poder contribuir al diseño de sitios web y a la comunicación fluida con los usuarios. Soy creativa y con buenas habilidades comunicacionales. Amo el trabajo en equipo y la educación continua.</p>
             <p>Desde que salí como Periodista de la Universidad de Chile, trabajé durante 15 años en televisión, radio,
                 instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
@@ -61,15 +61,27 @@
                 llegó el diseño y la programación web.</p>
             <p class="mt-3">Desde 2020, he trabajado de manera integrada para crear proyectos digitales exitosos, asegurando una buena comunicación a través de
                 distintas
-                estrategias, tales como: </p>
-            <div class="pt-5">
-                <img src="./assets/Img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
+                estrategias, tales como: </p> -->
+                <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Me motiva combinar mi experiencia en Periodismo y Diseño web con mi trabajo de Gestora Cultural, como directora ejecutiva de la Corporación Teatro Pencopolitano. Disfruto trabajando con diversos lenguajes y herramientas que puedes <span> <a href="studies.html">revisar AQUÍ.</a></span></p>
+                <p>Me inspira poder contribuir al desarrollo cultural y a la comunicación fluida con nuestros socios, colaboradores y los usuarios de nuestra sede: La Casa Pencopolitana. Soy creativa y con buenas habilidades comunicacionales. Amo el trabajo en equipo y la educación continua.</p>
+            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé durante 20 años en televisión, radio,
+                instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
+                por
+                la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
+                profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
+                se sumaron el diseño y la programación web.</p>
+            <!-- <p class="mt-3">Desde 2020, he trabajado de manera integrada para crear proyectos exitosos, asegurando una buena comunicación y gestión. </p> -->
+            <div class="pt-5 mt-5">
+                <img src="./assets/Img/fotos-gestion.jpg" alt="Cámara de fotos" class="img-camara m-3">
             </div>
         </div>
-        <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/Img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
-            <p class="mt-5">Investigar la experiencia de usuario, la accesibilidd y las tendencias de mercado; diseñar prototipos de baja y alta resolución; programar el front end; seleccionar las palabras clave en los motores de búsqueda (SEO); contar historias
+        <section class="col-12 col-lg-5">
+            <img src="./assets/Img/pilar2026-modified.png" alt="Río Bío-Bío" id="rio-biobio">
+            <!-- <p class="mt-5">Investigar la experiencia de usuario, la accesibilidd y las tendencias de mercado; diseñar prototipos de baja y alta resolución; programar el front end; seleccionar las palabras clave en los motores de búsqueda (SEO); contar historias
                 que conecten emocionalmente con la audiencia; manejar herramientas de análisis, entre otras.</p>
+            <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
+                orillas del Río Bío Bío, Chile.</p> -->
+                <p class="pt-5 mt-5">Tengo experiencia en creación, planificación, financiamiento y ejecución de proyectos culturales; gestión de espacios culturales, escuelas y galerías de arte; formación y liderazgo de equipos de trabajo; administración de contenidos en medios de comunicación tradicional y digital; docencia, marketing digital, diseño de experiencia e interfaz de usuario y desarrollo web.</p>
             <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
                 orillas del Río Bío Bío, Chile.</p>
             <p class="mb-5">Gracias :)</p>
@@ -83,7 +95,7 @@
     </section>
     <section class="row final-home">
         <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
-            diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Desarrollo Web."</h4>
+            diseño y el lenguaje. Ambos se conjugan perfectamente en mi vocación."</h4>
         <div class="col-7 m-5 ps-5">
             <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
             <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
