cambio de titulo index1 por gestora cultural

--- a/index1.html
+++ b/index1.html
@@ -46,7 +46,7 @@
     
     <section class="my-5 pt-5">
         <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
-        <h1 class="epigrafeTituloHome2 text-center">PERIODISTA & DISEÑADORA WEB</h1>
+        <h1 class="epigrafeTituloHome2 text-center">PERIODISTA & GESTORA CULTURAL</h1>
         <h1 class="tituloHome text-center mt-5">UNA BUENA MEZCLA</h1>
     </section>
     <section class="textoHome row">
