--- a/index1.html
+++ b/index1.html
@@ -51,27 +51,21 @@
     </section>
     <section class="textoHome row">
         <div class="col-12 col-lg-6 m-3">
-            <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web y me motiva combinar mi experiencia en Periodismo + Diseño UX/UI + Front End para crear proyectos digitales efectivos y accesibles. Disfruto trabajando con diversos lenguajes y herramientas que puedes <span> <a href="studies.html">revisar AQUÍ.</a></span></p>
-                <p>Me inspira poder contribuir al diseño de sitios web y a la comunicación fluida con los usuarios. Soy creativa y con buenas habilidades comunicacionales. Amo el trabajo en equipo y la educación continua.</p>
-            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé durante 15 años en televisión, radio,
+            <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy creativa y con buenas habilidades comunicacionales. Amo el trabajo en equipo y la educación continua. Me motiva combinar mi experiencia en periodismo y diseño web con mi trabajo de gestora cultural, como directora ejecutiva de la Corporación Teatro Pencopolitano.</p>
+                <p>Me inspira poder contribuir al desarrollo cultural y a la comunicación fluida con nuestros socios, colaboradores y los usuarios de nuestra sede: La Casa Pencopolitana.</p>
+            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé durante 20 años en televisión, radio,
                 instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
                 por
                 la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                 profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
-                llegó el diseño y la programación web.</p>
-            <p class="mt-3">Desde 2020, he trabajado de manera integrada para crear proyectos digitales exitosos, asegurando una buena comunicación a través de
-                distintas
-                estrategias, tales como: </p>
+                se sumaron el diseño y la programación web.</p>
             <div class="pt-5">
                 <img src="./assets/Img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
             </div>
         </div>
         <section class="col-12 col-lg-5 mt-3">
             <img src="./assets/Img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
-            <p class="mt-5">Investigar la experiencia de usuario, la accesibilidd y las tendencias de mercado; diseñar prototipos de baja y alta resolución; programar el front end; seleccionar las palabras clave en los motores de búsqueda (SEO); contar historias
-                que conecten emocionalmente con la audiencia; manejar herramientas de análisis, entre otras.</p>
-            <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
-                orillas del Río Bío Bío, Chile.</p>
+            <p class="mt-5">Tengo experiencia en creación, planificación, financiamiento y ejecución de proyectos culturales; gestión de espacios culturales, escuelas y galerías de arte; formación y liderazgo de equipos de trabajo; administración de contenidos en medios de comunicación tradicional y digital; docencia, marketing digital, diseño de experiencia e interfaz de usuario y desarrollo web.</p>
             <p class="mb-5">Gracias :)</p>
             <div class="galeria-home text-center mb-5">
                 <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
