cambio de imagenes

--- a/index1.html
+++ b/index1.html
@@ -59,13 +59,13 @@
                 la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                 profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
                 se sumaron el diseño y la programación web.</p>
-            <div class="pt-5">
-                <img src="./assets/Img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
+            <div class="pt-5 mt-5">
+                <img src="./assets/Img/fotos-gestion.jpg" alt="Cámara de fotos" class="img-camara m-3">
             </div>
         </div>
-        <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/Img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
-            <p class="mt-5">Tengo experiencia en creación, planificación, financiamiento y ejecución de proyectos culturales; gestión de espacios culturales, escuelas y galerías de arte; formación y liderazgo de equipos de trabajo; administración de contenidos en medios de comunicación tradicional y digital; docencia, marketing digital, diseño de experiencia e interfaz de usuario y desarrollo web.</p>
+        <section class="col-12 col-lg-5">
+            <img src="./assets/Img/pilar2026-modified.png" alt="Río Bío-Bío" id="rio-biobio">
+            <p class="pt-5 mt-5">Tengo experiencia en creación, planificación, financiamiento y ejecución de proyectos culturales; gestión de espacios culturales, escuelas y galerías de arte; formación y liderazgo de equipos de trabajo; administración de contenidos en medios de comunicación tradicional y digital; docencia, marketing digital, diseño de experiencia e interfaz de usuario y desarrollo web.</p>
             <p class="mb-5">Gracias :)</p>
             <div class="galeria-home text-center mb-5">
                 <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
@@ -77,7 +77,7 @@
     </section>
     <section class="row final-home">
         <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
-            diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Desarrollo Web."</h4>
+            diseño y el lenguaje. Ambos se conjugan perfectamente en mi vocación: la gestión cultural."</h4>
         <div class="col-7 m-5 ps-5">
             <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
             <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
