cambio de mayuscula a minuscula en periodista

--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,7 @@
         <div class="col-12 col-lg-6 m-3">
             <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy creativa y con buenas habilidades comunicacionales. Amo el trabajo en equipo y la educación continua. Me motiva combinar mi experiencia en periodismo y diseño web con mi trabajo de gestora cultural, como directora ejecutiva de la Corporación Teatro Pencopolitano.</p>
                 <p>Me inspira poder contribuir al desarrollo cultural y a la comunicación fluida con nuestros socios, colaboradores y los usuarios de nuestra sede: La Casa Pencopolitana.</p>
-            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé durante 20 años en televisión, radio,
+            <p>Desde que salí como periodista de la Universidad de Chile, trabajé durante 20 años en televisión, radio,
                 instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
                 por
                 la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
