se agrego listado de actividades culturales destacadas

--- a/index1.html
+++ b/index1.html
@@ -59,14 +59,29 @@
                 la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                 profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
                 se sumaron el diseño y la programación web.</p>
+                <p>Tengo experiencia en creación, planificación, financiamiento y ejecución de proyectos culturales; gestión de espacios culturales, escuelas y galerías de arte; formación y liderazgo de equipos de trabajo; administración de contenidos en medios de comunicación tradicional y digital; docencia, marketing digital, diseño de experiencia e interfaz de usuario y desarrollo web.</p>
+                <p class="mb-5">Gracias :)</p>
             <div class="pt-5 mt-5">
-                <img src="./assets/Img/fotos-gestion.jpg" alt="Cámara de fotos" class="img-camara m-3">
+                <img src="./assets/Img/fotos-gestion1.png" alt="Cámara de fotos" class="img-camara pt-5 mt-5 w-100">
             </div>
         </div>
-        <section class="col-12 col-lg-5">
-            <img src="./assets/Img/pilar2026-modified.png" alt="Río Bío-Bío" id="rio-biobio">
-            <p class="pt-5 mt-5">Tengo experiencia en creación, planificación, financiamiento y ejecución de proyectos culturales; gestión de espacios culturales, escuelas y galerías de arte; formación y liderazgo de equipos de trabajo; administración de contenidos en medios de comunicación tradicional y digital; docencia, marketing digital, diseño de experiencia e interfaz de usuario y desarrollo web.</p>
-            <p class="mb-5">Gracias :)</p>
+        <section class="col-12 col-lg-5 mb-5">
+            <img src="./assets/Img/pilar2026-modified.png" alt="Pilar García Royo" id="rio-biobio" class="mt-5">
+            <h3 class="proyects-title text-center pt-4 my-5">Iniciativas culturales destacadas</h3>
+            <ul>
+                <li>Dirección de la Casa Cultural Pencopolitana, 2025 a la fecha.</li>
+                <li>Coordinadora de la Escuela de las Artes, 2025 a la fecha.</li>
+                <li>Curadora de la Galería Pencopolitana de Arte, 2001 al 2009 y 2025 a la fecha.</li>
+                <li>Conductora y showrunner de Travesía, 2003, serie de documentales sobre la historia de Concepción, Fondart Regional, TVN Red Biobío y Señal Internacional.</li>
+                <li>Productora The Harlem Gospel Choir, 2002.</li>
+                <li>Productora Ballet México Azteca, 2001.</li>
+                <li>Productora Concierto de Pablo Milanés, 2000.</li>
+                <li>Productora Myriam Hernández, La Tortuga de Talcahuano, 1999.</li>
+                <li>Productora Ballet Nacional de Georgia, 1998.</li>
+                <li>Coordinadora de Concursos Nacional y Regional de Canto Lírico, FONDART REGIONAL, 1998-1999 respectivamente.</li>
+                <li>Diversos conciertos de cámara, coros y sinfónicos.</li>
+                <li>Autora y editora de diversas publicaciones.</li>
+            </ul>
             <div class="galeria-home text-center mb-5">
                 <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
                 <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
@@ -77,7 +92,7 @@
     </section>
     <section class="row final-home">
         <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
-            diseño y el lenguaje. Ambos se conjugan perfectamente en mi vocación: la gestión cultural."</h4>
+            diseño y el lenguaje. Ambos se conjugan perfectamente en mi vocación."</h4>
         <div class="col-7 m-5 ps-5">
             <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
             <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
